* 2014-10-16 - thorben.betten@open-xchange.com

 - Fix for bug 34985: Restrictive reading of configuration and improved logging in case a .properties file contains a malformed Unicode
                      escape sequence
 - Fix for bug 34922: Properly re-initialize config-cascade's "server" configuration provider on configuration reload trigger

* 2014-10-14 - thorben.betten@open-xchange.com

 - Fix for bug 34920: Do not close SQL resources on SearchIterator creation
 - Fix for bug 33862: Signal former folder type "7" for shared/public mail folders for USM-* clients

* 2014-10-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 34896: Initialize member before first accessing it
 - Fix for bug 34897: Consider number of files in context for "amount"-type quota

* 2014-10-10 - thorben.betten@open-xchange.com

 - Fix for bug 34861: Use shorter call-back URL as IE seems to cut off call-back URL if certain size is exceeded
 - Fix for bug 34755: Support unquoted, mime-encoded personal part in an E-Mail address string
 - Fix for bug 34806: Accept any letters in CSS values

* 2014-10-09 - thorben.betten@open-xchange.com

 - Fix for bug 34776: Drop passed Message-ID header on draft-edit action
 - Fix for bug 34867: Added missing import to 'com.openexchange.mailfilter.json' bundle

* 2014-10-09 - steffen.templin@open-xchange.com

 - Fix for bug 34850: Find API now returns user input as is, i.e. clients must not interpret it as HTML.

* 2014-10-09 - marcus.klein@open-xchange.com

 - Fix for bug 34846: Marked guard.properties as configuration file.

* 2014-10-08 - thorben.betten@open-xchange.com

 - Fix for bug 34812: Restored required "read_stream" permission when initializing a new Facebook OAuth account,
                      which is basically a revert for commit 145a880b7557d89754b509deeef34c4bcc1a84d5 (bug 34281)
 - Fix for bug 34727: Set proper full-name to Unified Mail subfolders